--- a/client/styles/resident/contact_us.css
+++ b/client/styles/resident/contact_us.css
@@ -4,7 +4,7 @@
     --h3: 48px;
     --h3-lh: 60px;
     --h3-letter-space: -0.3%;
-    
+
     --h4: 36px;
     --h4-lh: 44px;
     --h4-letter-space: -0.2%;
@@ -22,7 +22,8 @@
     --fw-bold: 700;
 }
 
-.contact .banner {
+/* ==================== Contanct section ==================== */
+.contact .content .banner {
     padding: 32px 24px;
     background-image: url(../../img/banner-1.png);
     background-position: center;
@@ -31,13 +32,13 @@
     border-radius: 16px;
 }
 
-.contact .banner .header-and-parags {
+.contact .content .banner .header-and-parags {
     color: white;
     max-width: 775px;
     margin-top: 56px;
 }
 
-.contact .banner .header-and-parags h3 {
+.contact .content .banner .header-and-parags h3 {
     font-size: var(--h3);
     font-weight: var(--fw-bold);
     line-height: var(--h3-lh);
@@ -45,7 +46,7 @@
     margin-bottom: 12px;
 }
 
-.container-1 {
+.contact .container-1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -53,36 +54,31 @@
     margin-top: 32px;
 }
 
-.container-1 .content {
+.contact .container-1 .content {
     width: 50%;
 }
 
-.contact .content:last-child div {
-    width: auto;
-}
-
-.container-1 .content:last-child img {
+.contact .container-1 .content:last-child img {
     max-width: 566px;
     margin-inline: auto;
 }
 
-.container-1 h4 {
+.contact .container-1 .content:first-child h4 {
     margin-bottom: 40px;
     font-size: var(--h4);
     font-weight: var(--fw-semibold);
     line-height: var(--h4-lh);
     letter-spacing: var(--h4-letter-space);
-    margin-bottom: 40px;
     color: var(--color-blue-1);
 }
 
-.container-1 .icon-and-info {
+.contact .container-1 .content:first-child > .icon-and-info {
     display: flex;
     align-items: center;
     column-gap: 72px;
 }
 
-.container-1 .icon-and-info .info h6 {
+.contact .container-1 .content:first-child > .icon-and-info .info h6 {
     font-size: var(--h6);
     font-weight: var(--fw-semibold);
     line-height: var(--h6-lh);
@@ -90,7 +86,7 @@
     color: var(--color-blue-1);
 }
 
-.container-1 .icon-and-info .info p {
+.contact .container-1 .content:first-child > .icon-and-info .info p {
     font-size: var(--tx1);
     font-weight: var(--fw-regular);
     line-height: var(--tx1-lh);
@@ -98,6 +94,6 @@
     max-width: 326px;
 }
 
-.container-1 .content .icon-and-info:last-child {
+.contact .container-1 .content .icon-and-info:last-child {
     margin-top: 32px;
 }
