--- a/client/styles/resident/status.css
+++ b/client/styles/resident/status.css
@@ -15,17 +15,18 @@
     --fw-bold: 700;
 }
 
-.status .inner-container {
+/* ==================== Status section ==================== */
+.status .container-1 {
     padding: 32px 64px;
     border: 1px solid grey;
     border-radius: 16px;
 }
 
-.status .header-and-text {
+.status .container-1 .content .header-and-text {
     margin-bottom: 32px;
 }
 
-.status .header-and-text h4 {
+.status .container-1 .content .header-and-text h4 {
     font-size: var(--h4);
     font-weight: var(--fw-bold);
     line-height: var(--h4-lh);
@@ -33,13 +34,13 @@
     margin-bottom: 12px;
 }
 
-.status .header-and-text p {
+.status .container-1 .content .header-and-text p {
     font-size: var(--tx1);
     font-weight: var(--fw-regular);
     line-height: var(--tx1-lh);
 }
 
-.status-bar-container {
+.status .container-1 .status-bar-container {
     width: 100%;
     text-align: center;
     border: 1px solid grey;
